fix spacing

--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ p {
 }
 
 section:not(:last-child) {
-  margin-bottom: 40px;
+  margin-bottom: 34px;
 }
 
 .wrapper {
